@@ -12,7 +12,9 @@ mkdir mods
 echo " > multi-compiling modules"
 rem spark is required as an automatic module, so copy it to mods
 copy libs\spark-core-*.jar mods\
-javac --module-path mods --module-source-path "./*/src/main/java" -d classes --module monitor
+rem since the monitor services are not required (directly or indirectly)
+rem from the root module monitor, they are added manually
+javac --module-path mods --module-source-path "./*/src/main/java" --add-modules=monitor.observer.alpha,monitor.observer.beta -d classes --module monitor
 
 echo " > packaging modules"
 jar --create --file mods/monitor.observer.jar -C classes/monitor.observer .
@@ -21,5 +23,15 @@ jar --create --file mods/monitor.observer.beta.jar -C classes/monitor.observer.b
 jar --create --file mods/monitor.statistics.jar -C classes/monitor.statistics .
 jar --create --file mods/monitor.persistence.jar -C classes/monitor.persistence .
 jar --create --file mods/monitor.rest.jar -C classes/monitor.rest .
-jar --create --file mods/monitor.peek.jar --main-class monitor.Peek -C classes/monitor.peek .
 jar --create --file mods/monitor.jar --main-class monitor.Main -C classes/monitor .
+
+rem monitor.observer.zero is not a module, so it can't be added
+rem to thmulti-module compiler - do it separately instead
+echo " > building monitor.observer.zero (plain JAR)"
+set JARS=
+for %%f in (mods\*.jar) do call set JARS=%%JARS%%;"%%f"
+dir /S /B monitor.observer.zero\src\*.java > sources.txt
+javac --class-path %JARS% -d classes/monitor.observer.zero @sources.txt
+xcopy monitor.observer.zero\src\main\resources classes\monitor.observer.zero /e
+del sources.txt
+jar --create --file mods/monitor.observer.zero.jar -C classes/monitor.observer.zero .
