@@ -11,17 +11,22 @@ echo "--- LAUNCH ---"
 echo " > run monitor"
 echo ""
 
+# (because spark.core is an automatic module and actually required,
+#  monitor.observer.zero would be resolved as well and does not need
+#  to be added explicitly; it is still done for clarity)
 if [ "$1" == "mvn" ]
 then
 # the classpath is needed for Spark's dependencies
 	$JAVA \
 		--module-path mods-mvn \
 		--class-path "libs/*" \
+		--add-modules monitor.observer.zero \
 		--module monitor
 else
 # the classpath is needed for Spark's dependencies
 	$JAVA \
 		--module-path mods \
 		--class-path "libs/*" \
+		--add-modules monitor.observer.zero \
 		--module monitor
 fi
